# violetear-web-api

./: .buildpacks  .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.deploy  LICENSE  Procfile  README.md  build_bootstrap.sh  build_deploy.sh  rustfmt.toml
migrations/2019-07-18-035819_create_users/: up.sql
migrations/2019-07-18-040524_create_tokens/: up.sql
migrations/2019-07-27-021940_create_tasks/: up.sql
migrations/2019-07-27-135140_create_reports/: down.sql  up.sql
migrations/2019-07-29-170630_create_workers/: down.sql  up.sql
migrations/2019-07-29-171016_create_worker_capabilities/: down.sql  up.sql
migrations/2019-07-29-171407_alter_tasks_status_datatype/: down.sql  up.sql
migrations/2019-07-29-172647_alter_worker_capabilities/: down.sql  up.sql
migrations/2019-07-29-173103_create_profiles/: up.sql
migrations/2019-08-05-022116_add_foreign_keys/: down.sql  up.sql
migrations/2019-08-05-041043_add_unique_profile_names/: down.sql  up.sql
migrations/2019-08-13-125321_insert_test_data/: down.sql  up.sql
migrations/2019-08-14-124358_add_tasks_messages/: down.sql  up.sql
migrations/2019-08-16-191417_insert_clamav-daemon_profile/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  profiles.rs  reports.rs  routes.rs  schema.rs  tasks.rs
