[package]
name = "web-api"
version = "0.1.0"
authors = ["lle-bout"]
edition = "2018"

[dependencies]
actix-web = "1.0.0"
env_logger = "0.6.1"
clap = "2.33.0"
r2d2_sqlite = "0.10.0"
r2d2 = "0.8.5"
rusqlite = "0.18.0"
serde_json = "1.0.39"
serde_derive = "1.0.92"
serde = "1.0.92"
uuid = { version = "0.7.4", features = ["v4"] }