[package]
name = "web-api"
version = "0.1.0"
authors = ["lle-bout"]
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-cors = "0.1.0"
env_logger = "0.6"
clap = "2.33"
r2d2_sqlite = "0.10"
r2d2 = "0.8"
rusqlite = "0.18"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
uuid = { version = "0.7", features = ["v4"] }
bcrypt = "0.4"

[patch.crates-io]
ring = { git = 'https://github.com/leo-lb/ring', branch = "ppc64le" }