[package]
name = "web-api"
version = "0.1.0"
authors = ["lle-bout"]
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-cors = "0.1.0"
env_logger = "0.6"
clap = "2.33"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
uuid = { version = "0.7", features = ["v4"] }
bcrypt = "0.5"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2", "serde_json"] }
dotenv = "0.15"
futures = "0.1"
chrono = { version = "0.4", features = ["serde"] }
multihash = "0.8"
quick-error = "1.2"
hex = "0.3"
bytes = "0.4"